# TirGo

./: .env  .gitignore  .~lock.pacientes.csv#  Dockerfile  Prueba.txt  README.md  centrador_servos.py  docker-compose.yml  pacientes.csv  recetas.csv  tirgo_ALL.sh  tirgo_ALL_dev.sh  tirgo_stack.sh
carpeta_compartida/: Mapa_aula_mod_1.0.yaml  build_tirgo_ws.sh  setup_env.sh  setup_env_sim.sh  setup_tirgo_env.sh  tirgo_run_all.sh
carpeta_compartida/carpeta_compartida/catkin_ws_src_backup_20251009-0950/devel/: .catkin  local_setup.fish  setup.sh
carpeta_compartida/carpeta_compartida/docs/: Lanzar.txt
carpeta_compartida/catkin_ws/devel/: .catkin  local_setup.sh  setup.bash  setup.zsh
carpeta_compartida/catkin_ws/devel/lib/pkgconfig/: catkin_tools_prebuild.pc
carpeta_compartida/catkin_ws_src_backup_20251009-0950/biomedical_instrumentation_an_robotics/scripts/: 1shoulder_abduction.py
carpeta_compartida/catkin_ws_src_backup_20251009-0950/devel/: setup.fish
carpeta_compartida/catkin_ws_src_backup_20251009-0950/devel/lib/pkgconfig/: biomedical_instrumentation_an_robotics.pc
carpeta_compartida/docs/: HITO2.md  Lanzar.txt  README_BUILD_DISPENSER.md  TESTING.md  mover_teleop.txt  notas  notas_dispenser.txt  rostopiclist.txt
carpeta_compartida/docs/Galeria/: readme.md
carpeta_compartida/gallium/share/tiago_moveit_config/launch/: demo_tiago.launch
carpeta_compartida/ros_ws/: README.md
carpeta_compartida/ros_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.fish  setup.sh
carpeta_compartida/ros_ws/devel/lib/pkgconfig/: servo_dispenser.pc  stt_vosk.pc
carpeta_compartida/ros_ws/devel/lib/stt_vosk/: list_audio_devices.py
carpeta_compartida/ros_ws/scripts/: run_mission_tests.sh
carpeta_compartida/ros_ws/src/biomedical_instrumentation_an_robotics/: CMakeLists.txt  package.xml
carpeta_compartida/ros_ws/src/biomedical_instrumentation_an_robotics/scripts/: control_tiago.py  demo_students.py
carpeta_compartida/ros_ws/src/brazo_robot/: CMakeLists.txt  README.md  package.xml
carpeta_compartida/ros_ws/src/brazo_robot/scripts/: tiago_pick_sequence.py
carpeta_compartida/ros_ws/src/brazo_robot_backup/: comands.txt
carpeta_compartida/ros_ws/src/brazo_robot_backup/scripts/: tiago_pick_sequence.py
carpeta_compartida/ros_ws/src/move/: CMakeLists.txt  README.md  notas.txt
carpeta_compartida/ros_ws/src/move/configs/: Puntos_sala.txt  README.md  rviz_configs.rviz
carpeta_compartida/ros_ws/src/servo_dispenser/: CMakeLists.txt  README.md  README_BUILD_DISPENSER.md  package.xml  run_servo.sh
carpeta_compartida/ros_ws/src/servo_dispenser/launch/: servo_dispenser_rpi.launch
carpeta_compartida/ros_ws/src/servo_dispenser/scripts/: servo_dispenser_node.py  setup_servo_rpi.sh
carpeta_compartida/ros_ws/src/servo_dispenser/test/: conftest.py  servo_dispenser_flow.test  test_servo_dispenser.py  test_servo_dispenser_flow.py
carpeta_compartida/ros_ws/src/stt_vosk/: CMakeLists.txt  README.md  package.xml
carpeta_compartida/ros_ws/src/stt_vosk/launch/: stt_vosk.launch
carpeta_compartida/ros_ws/src/stt_vosk/tests/: test_stt_vosk_node.py
carpeta_compartida/ros_ws/src/tirgo_bringup/: CMakeLists.txt  README.md  package.xml  tirgo_run_def.sh
carpeta_compartida/ros_ws/src/tirgo_bringup/launch/: tirgo_all.launch  tirgo_all_deploy.launch  tirgo_all_dev.launch  tirgo_bringup.launch  tirgo_core.launch  tirgo_hri.launch  tirgo_web.launch
carpeta_compartida/ros_ws/src/tirgo_mission_server/: CMakeLists.txt  README.md  package.xml
carpeta_compartida/ros_ws/src/tirgo_mission_server/launch/: tiago_speech.launch
carpeta_compartida/ros_ws/src/tirgo_mission_server/scripts/: test_tirgo_mission.py  tiago_speech_node.py  tirgo_mission_server.py
carpeta_compartida/ros_ws/src/tirgo_mission_server/test/: conftest.py  test_mission_flow.py  test_mission_flow.test  test_tirgo_mission.py
carpeta_compartida/ros_ws/src/tirgo_msgs/: CMakeLists.txt  README.md  package.xml
carpeta_compartida/ros_ws/src/tirgo_msgs/action/: TirgoMission.action
carpeta_compartida/ros_ws/src/tirgo_qr/: CMakeLists.txt  package.xml
carpeta_compartida/ros_ws/src/tirgo_qr/scripts/: qr_scanner.py
carpeta_compartida/ros_ws/src/tirgo_tiago_arm_seq/: CMakeLists.txt  README.md  package.xml
carpeta_compartida/ros_ws/src/tirgo_ui/: CMakeLists.txt  README.md  package.xml  setup.py
carpeta_compartida/ros_ws/src/tirgo_ui/data/: pacientes_min_schema.csv  recetas.csv  tirgo.db  tirgo_backup_20251021_2214.db
carpeta_compartida/ros_ws/src/tirgo_ui/launch/: tirgo_ui.launch  web.launch  web_server.launch
carpeta_compartida/ros_ws/src/tirgo_ui/scripts/: tirgo_web_server  web_server.py  web_server_v2.py
carpeta_compartida/ros_ws/src/tirgo_ui/src/tirgo_ui/: __init__.py  app.py  config.py  hotword.py  mongo_client.py  rosio.py  seed_demo_data.py  services.py  session.py  storage.py  storage_mongo.py
carpeta_compartida/ros_ws/src/tirgo_ui/src/tirgo_ui/routes/: __init__.py  consultar.py  diagnostico.py  leer.py  main.py
carpeta_compartida/ros_ws/src/tirgo_ui/static/: app.js  style.css  style_v2.css
carpeta_compartida/ros_ws/src/tirgo_ui/templates/: await_hotword.html  base.html  consultar.html  consultar_paciente_no_existente.html  consultar_result.html  diagnostico.html  index.html  index_v2.html  leer.html  leer_ident.html  leer_ok.html  leer_sin_stock.html  menu.html  status.html
carpeta_compartida/ros_ws/src/tirgo_ui/tests/: test_consultar.py  test_diagnostico.py  test_leer.py  test_main_routes.py  test_rosio_helpers_unit.py  test_session_unit.py  test_storage_mongo_unit.py  test_storage_stock_dispenses.py  test_web_ros_integration.py
carpeta_compartida/web/: .gitignore  README.md  app.py  setup_env.sh
carpeta_compartida/web/templates/: index.html
contenedor_tiago/: Dockerfile  docker-compose.yml  instalar.sh
contenedor_tiago/carpeta_compartida/: .bashrc  setup_env.sh
contenedor_tiago/carpeta_compartida/catkin_ws/devel/: _setup_util.py  env.sh  local_setup.bash  local_setup.zsh  setup.sh
infra/tirgo_db_stack/: .env  README.md  docker-compose.yml
infra/tirgo_db_stack/mongo-init/: 001-init.js
(+37 files in other folders)
