<?xml version="1.0"?>
<package format="2">
  <name>stt_vosk</name>
  <version>0.0.1</version>
  <description>Speech-to-text offline (Vosk) para ROS 1 Noetic</description>

  <maintainer email="errastikat@todo.todo">errastikat</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export/>
</package>
