<package format="2">
  <name>tirgo_msgs</name>
  <version>0.0.1</version>
  <description>Mensajes y actions para Tirgo Pharma</description>

  <maintainer email="tigo@example.com">Equipo Tirgo</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>
